# trifecta-trader-poc

./: .gitignore  pyproject.toml
.cursor/rules/: trading-agents.mdc
docs/: CURSOR_TASK_002_BUG_FIXES.md  CURSOR_TASK_003_HYBRID_EXPERIMENT.md  CURSOR_TASK_004_LIVE_HYBRID_VALIDATION.md  CURSOR_TASK_005_LOCAL_MODEL_SCALING.md  CURSOR_TASK_006_PROMPT_ENGINEERING.md  CURSOR_TASK_007_TRADE_EXECUTION.md  CURSOR_TASK_008_STRUCTURED_OUTPUT_AND_LIVE_PAPER_TRADE.md  TASK_001_REPORT.md  TASK_002_REPORT.md  TASK_003_REPORT.md  TASK_004_REPORT.md  TASK_005_REPORT.md  TASK_006_REPORT.md  TASK_007_REPORT.md  TASK_008_REPORT.md
results/: comparison_report.txt  model_scaling_comparison.txt  prompt_engineering_results.txt  reasoning_comparison_output.txt  task_005_unit_tests.txt  task_006_unit_tests.txt  task_007_unit_tests.txt  task_008_dryrun_AAPL.txt  task_008_dryrun_TSLA.txt  task_008_structured_output_test.txt  task_008_unit_tests.txt  tool_calling_scaling.txt
results/AAPL/: analysis_2026-02-27_all_cloud.json  analysis_2026-02-27_hybrid_qwen.json  (+3 more)
src/: compare_runs.py  enhanced_llm.py  hybrid_graph.py  hybrid_llm.py  quality_scorer.py  run_analysis.py  scaling_report.py  signal_processing.py
tests/: conftest.py  test_alpaca_connection.py  test_compare_runs.py  test_config.py  test_enhanced_llm.py  test_executor.py  test_hybrid_llm.py  test_local_tool_calling.py  test_pipeline.py  test_position_manager.py  test_prompt_engineering.py  test_quality_scorer.py  test_reasoning_comparison.py  test_signal_processing.py  test_structured_output.py  test_trade_params.py
(+8 files in other folders)
